composant card en cours...

--- a/design-guide.html
+++ b/design-guide.html
@@ -28,12 +28,20 @@
       </section>
       <section>
         <h2>.card</h2>
-        <article class="card">
-          <img class="card__image" src="assets/images/totoro.jpg" alt="Totoro" />
-          <h3 class="card__title">Card title</h3>
-          <p class="card__text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <button class="button button--primary">Button</button>
-        </article>
+        <div style="display: flex; align-items: flex-start; gap: 1rem">
+          <article class="card">
+            <img class="card__image" src="assets/images/totoro.jpg" alt="Totoro" />
+            <h3 class="card__title">Card title</h3>
+            <p class="card__text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <button class="button button--primary">Button</button>
+          </article>
+          <article class="card">
+            <img class="card__image" src="assets/images/test2.png" alt="Totoro" />
+            <h3 class="card__title">Card title</h3>
+            <p class="card__text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <button class="button button--primary">Button</button>
+          </article>
+        </div>
       </section>
     </div>
   </body>
