fin des classes utilitaires

--- a/design-guide.html
+++ b/design-guide.html
@@ -33,10 +33,16 @@
             <img class="card__image" src="assets/images/totoro.jpg" alt="Totoro" />
             <h3 class="card__title">Card title</h3>
             <p class="card__text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <button class="button button--primary">Button</button>
+            <button class="button button--primary p--6">Button</button>
           </article>
           <article class="card">
             <img class="card__image" src="assets/images/test2.png" alt="Totoro" />
+            <h3 class="card__title">Card title</h3>
+            <p class="card__text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <button class="button button--primary">Button</button>
+          </article>
+          <article class="card card--full">
+            <img class="card__image" src="assets/images/totoro.jpg" alt="Totoro" />
             <h3 class="card__title">Card title</h3>
             <p class="card__text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <button class="button button--primary">Button</button>
