fin composant grid

--- a/design-guide.html
+++ b/design-guide.html
@@ -6,7 +6,7 @@
     <title>Design guide</title>
     <link rel="stylesheet" href="dist/css/main.css" />
   </head>
-  <body>
+  <body class="pb--6">
     <div class="container">
       <section>
         <h2>.button</h2>
@@ -47,6 +47,20 @@
             <p class="card__text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <button class="button button--primary">Button</button>
           </article>
+        </div>
+      </section>
+      <section>
+        <h2>.grid</h2>
+        <div class="grid">
+          <div class="col--md--6 col--xl--3">
+            <div class="bg-grey p--6"></div>
+          </div>
+          <div class="col--6">
+            <div class="bg-grey p--6"></div>
+          </div>
+          <div class="col--3">
+            <div class="bg-grey p--6"></div>
+          </div>
         </div>
       </section>
     </div>
